# ocr-receipt

./: .cursorrules  .gitignore  README.md  agile-plan.md  config.yaml  delete_all_branches.sh  en  ocr-invoice-spec.md  ocr-receipt-spec.md  ocr_receipt.db  ocr_receipts.db  ocr_receipts.db.backup.db.2025-07-27.db  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.db  test_config.yaml  test_multi_language_integration.py  test_signal.db  test_statistics_gui_integration.py  yoyo.ini
examples/: migration_example.py  ocr_engine_example.py
migrations/: 001_initial_schema.py  001_initial_schema.sql  002_add_case_sensitive_to_business_and_keywords.py  003_add_match_type_to_business_keywords.py  004_add_document_types.py
tests/: conftest.py  test_base_parser.py  test_business_keyword_management.py  test_business_keywords_tab.py  test_business_mapping_manager.py  test_categories_tab.py  test_config_manager.py  test_database_manager.py  test_date_extractor.py  test_dialog_integration_comprehensive.py  test_dialogs.py  test_document_type_manager.py  test_file_naming_tab.py  test_filename_utils.py  test_invoice_parser.py  test_keyword_deletion_integration.py  test_keywords_table.py  test_migration_integration.py  test_migration_manager.py  test_migrations.py  test_minimal_widget.py  test_ocr_engine.py  test_pdf_loading_indicators.py  test_projects_categories_integration.py  test_projects_tab.py  test_settings_tab.py  test_single_pdf_tab.py  test_statistics_functionality.py  test_tab_dialog_integration.py  test_tab_integration_workflow.py  test_tabs_comprehensive.py  (+3 more)
(+46 files in other folders)
